# envbind-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml
docs/: api-guide.md  architecture.md  open-source.md  publishing.md  release-checklist.md  testing-guide.md
examples/: service_settings.rs
src/: binder.rs  environment.rs  error.rs  lib.rs  source.rs  validators.rs
src/fields/: b64.rs  bool.rs  enumeration.rs  float.rs  int.rs  json.rs  list.rs  mod.rs  raw.rs  string.rs  u16.rs
tests/: binder.rs  environment.rs  error.rs  fields_bool.rs  fields_string.rs  fields_u16.rs  parameter_source.rs  python_parity.rs  validators.rs
