[package]
name = "onetesseractinmultiverse-envbind"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Typed environment binding primitives for Rust services."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/onetesseractinmultiverse-envbind"
repository = "https://github.com/OneTesseractInMultiverse/envbind"
authors = ["Pedro Guzmán"]
keywords = ["configuration", "environment", "settings", "config", "rust"]
categories = ["config", "development-tools"]
include = [
  "CHANGELOG.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Cargo.toml",
  "SECURITY.md",
  "docs/**",
  "examples/**",
  "LICENSE-MIT",
  "Makefile",
  "README.md",
  "src/**",
  "tests/**",
]

[lib]
name = "envbind"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22"
regex = "1"
serde_json = "1"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_qualifications = "warn"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"
